<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp">

    <androidx.cardview.widget.CardView
        style="@style/CardView.Dark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="25dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginEnd="12dp">


            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:orientation="vertical"
                android:padding="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical">

                    <TextView
                        android:id="@+id/assessmentCardSubject"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif-smallcaps"
                        android:text="@string/subject"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/assessmentCardDeadline"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:drawablePadding="5dp"
                        android:fontFamily="sans-serif-smallcaps"
                        android:gravity="end"
                        android:text="@string/deadline"
                        android:textColor="#C8FFFFFF"
                        android:textStyle="normal"
                        app:drawableStartCompat="@drawable/icon_timetable"
                        app:drawableTint="@color/white" />

                </LinearLayout>

                <TextView
                    android:id="@+id/assessmentCardTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-smallcaps"
                    android:padding="3dp"
                    android:text="@string/title"
                    android:textColor="@color/purple_200"
                    tools:ignore="TextContrastCheck" />

            </LinearLayout>

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/checkboxAssessment"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:buttonTint="@color/white"
                android:checked="false"
                android:minWidth="48dp"
                app:useMaterialThemeColors="true" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>